--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-<script language="javascript" type="text/javascript">
-     <!--
-     window.setTimeout('window.open("http:/athelo.net/clean-blog","newsite")',4500);
-     // -->
- </script>
+<html>
+<head>
+<title>A web page that points a browser to a different page after 2 seconds</title>
+<meta http-equiv="refresh" content="2; URL=http://www.athelo.net/clean-blog">
+<meta name="keywords" content="automatic redirection">
+</head>
+<body>
+If your browser doesn't automatically go there within a few seconds, 
+you may want to go to 
+<a href="http://www.athelo.net/clean-blog">the destination</a> 
+manually.
+</body>
+</html
